--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -32,15 +32,12 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
       <header class="inner">
-        <a id="forkme_banner" href="https://github.com/auy86/fTetWild">View on GitHub</a>
 
-        <h1 id="project_title">Parallel Tetrahedral Mesh Generation</h1>
-        <h2 id="project_tagline">Alex Havrilla and Ariel Uy</h2>
 
-        <a href="index"><button class="button">Home</button></a>
-        <a href="proposal"><button class="button">Proposal</button></a>
-        <a href="checkpoint"><button class="button">Checkpoint</button></a>
-        <a href="final"><button class="button">Final</button></a>
+        <a href="index"><button class="button">About</button></a>
+        <a href="proposal"><button class="button">Math</button></a>
+        <a href="checkpoint"><button class="button">CS</button></a>
+        <a href="final"><button class="button">Other</button></a>
       </header>
     </div>
 
@@ -54,10 +51,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">
-          Parallel Tetrahedral Mesh Generation maintained by
-          <a href="https://github.com/auy86">auy86</a> and <a href="https://github.com/Dahoas">Dahoas</a>
-        </p>
+        
 
         <p>
           Published with <a href="https://pages.github.com">GitHub Pages</a>
