--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -35,9 +35,9 @@
 
 
         <a href="index"><button class="button">About</button></a>
-        <a href="proposal"><button class="button">Math</button></a>
-        <a href="checkpoint"><button class="button">CS</button></a>
-        <a href="final"><button class="button">Other</button></a>
+        <a href="math"><button class="button">Math</button></a>
+        <a href="cs"><button class="button">CS</button></a>
+        <a href="other"><button class="button">Other</button></a>
       </header>
     </div>
 
