--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -35,9 +35,9 @@
 
 
         <a href="index"><button class="button">About</button></a>
-        <a href="math"><button class="button">Math</button></a>
-        <a href="cs"><button class="button">CS</button></a>
-        <a href="other"><button class="button">Other</button></a>
+        <a href="mlresearch"><button class="button">ML Research</button></a>
+        <a href="otherprojects"><button class="button">Other Projects</button></a>
+        <a href="papersandnotes"><button class="button">Papers and Notes</button></a>
       </header>
     </div>
 
@@ -51,10 +51,10 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        
+
 
         <p>
-          Published with <a href="https://pages.github.com">GitHub Pages</a>
+          <a href="https://pages.github.com"><img src="artifacts/twitter.png"></a>
         </p>
       </footer>
     </div>
