--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -24,6 +24,10 @@
       cursor: pointer;
       background-color: #0690ff
     }
+    body {
+      background-image: "artifacts/landscape.jpg";
+      opacity: .5;
+    }
     </style>
 
   </head>
@@ -54,7 +58,7 @@
 
 
         <p>
-          <a href="https://pages.github.com"><img src="artifacts/twitter.png"></a>
+          <a href="https://sites.gatech.edu/ahavrilla/">Georgia Tech Page</a>
         </p>
       </footer>
     </div>
