--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -25,8 +25,7 @@
       background-color: #0690ff
     }
     body {
-      background-image: "artifacts/landscape.jpg";
-      opacity: .5;
+      background-image: "artifacts/abstractlandscape.jpg";
     }
     </style>
 
