--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -25,7 +25,7 @@
       background-color: #0690ff
     }
     body {
-      background-image: "artifacts/abstractlandscape.jpg";
+      background-image: url("artifacts/abstractlandscape.jpg");
     }
     </style>
 
