--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -22,10 +22,14 @@
       font-size: 16px;
       margin: 4px 2px;
       cursor: pointer;
-      background-color: #0690ff
+      background-color: #0690ff;
+      border-radius: 50%;
     }
     body {
-      background-image: url("artifacts/abstractlandscape.jpg");
+      background-image: url("artifacts/abstractlandscape.png");
+    }
+    img {
+      opacity: .25;
     }
     </style>
 
