--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -25,6 +25,19 @@
       background-color: #0690ff;
       border-radius: 50%;
     }
+    .box {
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+      background-color: #0690ff;
+      border-radius: 2px;
+    }
     body {
       background-image: url("artifacts/abstractlandscape.png");
     }
@@ -51,7 +64,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        {{ content }}
+        <section class="box">
+          {{ content }}
+        </section>
       </section>
     </div>
 
