--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -64,9 +64,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <section class="box">
+        <div id="box" class="box">
           {{ content }}
-        </section>
+        </divn>
       </section>
     </div>
 
