--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -22,7 +22,7 @@
       font-size: 16px;
       margin: 4px 2px;
       cursor: pointer;
-      background-color: #0690ff;
+      background-color: #023763;
       border-radius: 50%;
     }
     .box {
@@ -35,8 +35,8 @@
       font-size: 16px;
       margin: 4px 2px;
       cursor: pointer;
-      background-color: #0690ff;
-      border-radius: 2px;
+      background-color: #023763;
+      border-radius: 5px;
     }
     body {
       background-image: url("artifacts/abstractlandscape.png");
@@ -66,7 +66,7 @@
       <section id="main_content" class="inner">
         <div id="box" class="box">
           {{ content }}
-        </divn>
+        </div>
       </section>
     </div>
 
@@ -75,9 +75,9 @@
       <footer class="inner">
 
 
-        <p>
+        <div id="box" class="box">
           <a href="https://sites.gatech.edu/ahavrilla/">Georgia Tech Page</a>
-        </p>
+        </div>
       </footer>
     </div>
   </body>
