--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -29,20 +29,39 @@
       border: none;
       color: white;
       padding: 15px 32px;
-      text-align: center;
+      text-align: left;
       text-decoration: none;
       display: inline-block;
       font-size: 16px;
       margin: 4px 2px;
       cursor: pointer;
       background-color: #023763;
-      border-radius: 5px;
+      border-radius: 8px;
     }
     body {
       background-image: url("artifacts/abstractlandscape.png");
     }
     img {
       opacity: .25;
+    }
+     /* unvisited link */
+    a:link {
+      color: rgb(11, 217, 224);
+    }
+
+    /* visited link */
+    a:visited {
+      color: rgb(11, 217, 224);
+    }
+
+    /* mouse over link */
+    a:hover {
+      color: rgb(11, 217, 224);
+    }
+
+    /* selected link */
+    a:active {
+      color: rgb(11, 217, 224);
     }
     </style>
 
