--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -63,6 +63,12 @@
     a:active {
       color: rgb(11, 217, 224);
     }
+    .myimg{
+      width:50px;
+      height:50px;
+      object-fit:cover;
+      border-radius:50%;
+    }
     </style>
 
   </head>
@@ -95,7 +101,8 @@
 
 
         <div id="box" class="box">
-          <a href="https://sites.gatech.edu/ahavrilla/">Georgia Tech Page</a>
+          <a href="https://sites.gatech.edu/ahavrilla/"><img src="artifacts/gatech.jpeg"></a>
+          <a href="https://twitter.com/Dahoas1"><img src="artifacts/twitter.png"></a>
         </div>
       </footer>
     </div>
