--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -101,8 +101,8 @@
 
 
         <div id="box" class="box">
-          <a href="https://sites.gatech.edu/ahavrilla/"><img src="artifacts/gatech.jpeg"></a>
-          <a href="https://twitter.com/Dahoas1"><img src="artifacts/twitter.png"></a>
+          <a href="https://sites.gatech.edu/ahavrilla/"><img src="artifacts/gatech.jpeg" class="myimg"></a>
+          <a href="https://twitter.com/Dahoas1"><img src="artifacts/twitter.png" class="myimg"></a>
         </div>
       </footer>
     </div>
