--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -41,9 +41,6 @@
     body {
       background-image: url("artifacts/abstractlandscape.png");
     }
-    img {
-      opacity: .25;
-    }
      /* unvisited link */
     a:link {
       color: rgb(11, 217, 224);
@@ -102,6 +99,7 @@
 
         <div id="box" class="box">
           <a href="https://sites.gatech.edu/ahavrilla/"><img src="artifacts/gatech.jpeg" class="myimg"></a>
+          &nbsp;
           <a href="https://twitter.com/Dahoas1"><img src="artifacts/twitter.png" class="myimg"></a>
         </div>
       </footer>
