--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -130,6 +130,7 @@
         <a href="mlresearch"><button class="button">ML Research</button></a>
         <a href="otherprojects"><button class="button">Other Projects</button></a>
         <a href="papersandnotes"><button class="button">Papers and Notes</button></a>
+        <a href="teaching"><button class="button">Teaching</button></a>
       </header>
     </div>
 
@@ -154,10 +155,10 @@
           &nbsp;
           <div class="tooltip">
             <span class="tooltiptext" id="myTooltip">Copy to clipboard</span>
-          </div>
-          <button onclick="myFunction()" onmouseout="outFunc()">
-            <img src="artifacts/gmail.png" class="myimg">
-          </button>
+            <button onclick="myFunction()" onmouseout="outFunc()">
+              <img src="artifacts/gmail.png" class="myimg">
+              </button>
+            </div>
         </div>
       </footer>
     </div>
