--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -103,6 +103,12 @@
       visibility: visible;
       opacity: 1;
     }
+    .portrait{
+      width:300px;
+      height:300px;
+      border-radius:50%;
+      float: right;
+    }
     </style>
 
     <script>
