--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -60,6 +60,10 @@
     a:active {
       color: rgb(11, 217, 224);
     }
+    .light-blue {
+      color:rgb(11, 217, 224);
+      font-size: 16px;
+    }
     .myimg{
       width:50px;
       height:50px;
