github link update

--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -163,6 +163,8 @@
           &nbsp;
           <a href="https://twitter.com/Dahoas1"><img src="artifacts/twitter.png" class="myimg"></a>
           &nbsp;
+          <a href="https://github.com/Dahoas"><img src="artifacts/github.png" class="myimg"></a>
+          &nbsp;
           <div class="tooltip">
             <span class="tooltiptext" id="myTooltip">Copy to clipboard</span>
             <button onclick="myFunction()" onmouseout="outFunc()">
