--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -165,6 +165,8 @@
           &nbsp;
           <a href="https://github.com/Dahoas"><img src="artifacts/github.png" class="myimg"></a>
           &nbsp;
+          <a href="https://www.youtube.com/user/Dahoas/videos"><img src="artifacts/youtube.png" class="myimg"></a>
+          &nbsp;
           <div class="tooltip">
             <span class="tooltiptext" id="myTooltip">Copy to clipboard</span>
             <button onclick="myFunction()" onmouseout="outFunc()">
