--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -38,7 +38,7 @@
         border-radius: 8px;
       }
       body {
-        background-image: url("artifacts/abstractlandscape.png");
+        background-color: white;
       }
       /* unvisited link */
       a:link {
@@ -132,15 +132,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
       <header class="inner">
-        <a href="index"><button class="button">About</button></a>
-        <a href="mlresearch"><button class="button">ML Research</button></a>
-        <a href="otherprojects"
-          ><button class="button">Other Projects</button></a
-        >
-        <a href="papersandnotes"
-          ><button class="button">Papers and Notes</button></a
-        >
-        <a href="teaching"><button class="button">Teaching</button></a>
+        <a href="index"><button class="button">Research</button></a>
+        <a href="otherprojects"><button class="button">Misc Projects</button></a>
       </header>
     </div>
 
