--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -34,7 +34,7 @@
         display: inline-block;
         font-size: 16px;
         margin: 4px 2px;
-        background-color: #023763;
+        background-color: white;
         border-radius: 8px;
       }
       body {
