--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -27,7 +27,7 @@
       }
       .box {
         border: none;
-        color: white;
+        color: black;
         padding: 15px 32px;
         text-align: left;
         text-decoration: none;
