--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -133,6 +133,7 @@
     <div id="header_wrap" class="outer">
       <header class="inner">
         <a href="index"><button class="button">Research</button></a>
+        <a href="blog"><button class="button">Blog</button></a>
         <a href="otherprojects"><button class="button">Misc Projects</button></a>
       </header>
     </div>
