--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -34,11 +34,11 @@
         display: inline-block;
         font-size: 16px;
         margin: 4px 2px;
-        background-color: white;
+        background-color: #f1e7a8;
         border-radius: 8px;
       }
       body {
-        background-color: white;
+        background-color: #f1e7a8;
       }
       /* unvisited link */
       a:link {
@@ -133,8 +133,8 @@
     <div id="header_wrap" class="outer">
       <header class="inner">
         <a href="index"><button class="button">Research</button></a>
-        <a href="blog"><button class="button">Blog</button></a>
-        <a href="otherprojects"><button class="button">Misc Projects</button></a>
+        <a href="blog"><button class="button">Blog Posts</button></a>
+        <a href="otherprojects"><button class="button">Misc. Projects</button></a>
       </header>
     </div>
 
